--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,8 @@
     <color name="primary">#F84D17</color>
     <color name="transparent">#00ff0000</color>
     <color name="form_error">#F44336</color>
-
+    <color name="navi_btn_checked">#F7931E</color>
+    <color name="navi_btn">#B9B9B9</color>
     <!-- 로그인 -->
     <color name="login_button">#FFC107</color>
 </resources>
