--- a/app/src/main/res/drawable/button_round.xml
+++ b/app/src/main/res/drawable/button_round.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    android:padding="10dp"
-    android:shape="rectangle" >
-    <solid android:color="#000000" />
-    <corners
-        android:bottomLeftRadius="12dp"
-        android:bottomRightRadius="12dp"
-        android:topLeftRadius="12dp"
-        android:topRightRadius="12dp" />
+    <item android:state_enabled="false">
+        <shape>
+            <corners android:radius="28dp" />
+            <solid android:color="@color/cardview_dark_background" />
+        </shape>
+    </item>
+    <item android:drawable="@drawable/btn_background_filled"></item>
 </selector>
