--- a/app/src/main/res/layout/fragment_sign_up_school_info.xml
+++ b/app/src/main/res/layout/fragment_sign_up_school_info.xml
@@ -129,7 +129,8 @@
         android:background="@drawable/btn_background_outlined"
         android:elevation="5dp"
         android:orientation="horizontal"
-        android:padding="24dp"
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="20dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent">
 
