--- a/app/src/main/res/layout/fragment_sign_up_user_info.xml
+++ b/app/src/main/res/layout/fragment_sign_up_user_info.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="60dp"
         app:boxBackgroundColor="@color/transparent"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
@@ -48,7 +48,7 @@
             android:id="@+id/tl_user_nickname"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="58dp"
+            android:layout_marginTop="40dp"
             app:boxBackgroundColor="@color/transparent"
             app:boxStrokeWidth="0dp"
             app:boxStrokeWidthFocused="0dp"
@@ -99,7 +99,7 @@
             android:id="@+id/tv_birthday"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="58dp"
+            android:layout_marginTop="40dp"
             android:text="학과"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -139,7 +139,7 @@
             android:id="@+id/tv_gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="58dp"
+            android:layout_marginTop="40dp"
             android:text="학번"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -190,7 +190,8 @@
         android:background="@drawable/btn_background_filled"
         android:elevation="5dp"
         android:orientation="horizontal"
-        android:padding="24dp"
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="20dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent">
 
