--- a/app/src/main/res/drawable/ic_next.xml
+++ b/app/src/main/res/drawable/ic_next.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="19dp"
-    android:height="15dp"
-    android:viewportWidth="19"
-    android:viewportHeight="15">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
     <path
         android:fillColor="#FFF15A24"
-        android:pathData="M18.63 7.7c0-0.1-0.04-0.19-0.12-0.27L11.9 0.8c-0.15-0.17-0.26-0.2-0.37-0.2-0.21 0-0.38 0.16-0.38 0.37 0 0.1 0.03 0.2 0.11 0.27l3.9 3.9L17.5 7.4l-2.14-0.06H0.86c-0.2 0-0.37 0.16-0.37 0.38 0 0.21 0.17 0.37 0.37 0.37h14.5l2.14-0.05-2.33 2.24-3.9 3.91c-0.07 0.07-0.1 0.18-0.1 0.28 0 0.2 0.16 0.36 0.37 0.36 0.11 0 0.2-0.03 0.28-0.11l6.69-6.73c0.08-0.08 0.11-0.17 0.11-0.27Z"/>
+        android:pathData="M9.31 6.71c-0.1 0.1-0.17 0.2-0.22 0.32-0.05 0.12-0.07 0.25-0.07 0.39 0 0.13 0.02 0.26 0.07 0.38s0.13 0.23 0.22 0.32L13.19 12l-3.88 3.88c-0.19 0.19-0.3 0.44-0.3 0.7 0 0.27 0.11 0.52 0.3 0.71 0.19 0.19 0.44 0.3 0.7 0.3 0.27 0 0.52-0.11 0.71-0.3l4.59-4.59c0.1-0.1 0.17-0.2 0.22-0.32 0.05-0.12 0.07-0.25 0.07-0.39 0-0.13-0.02-0.26-0.07-0.38s-0.13-0.23-0.22-0.32L10.72 6.7C10.34 6.32 9.7 6.32 9.31 6.71Z"/>
 </vector>
