--- a/app/src/main/res/drawable/btn_background_outlined.xml
+++ b/app/src/main/res/drawable/btn_background_outlined.xml
@@ -4,8 +4,9 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/white" />
             <corners android:radius="28dp" />
-            <stroke android:color="@color/primary"
-                android:width="1dp"/>
+            <stroke
+                android:color="@color/primary"
+                android:width="1dp" />
         </shape>
     </item>
 </layer-list>
