--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,27 +2,27 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/home"
+        android:id="@+id/fragment_home"
         android:icon="@drawable/ic_home_24dp"
         android:title="Home" />
 
     <item
-        android:id="@+id/Search"
+        android:id="@+id/fragment_board"
         android:icon="@drawable/ic_chat_24dp"
-        android:title="Search" />
+        android:title="Board" />
 
     <item
-        android:id="@+id/placeholder"
+        android:id="@+id/fragment_battle"
         android:title="" />
 
     <item
-        android:id="@+id/Profile"
+        android:id="@+id/fragment_chart"
         android:icon="@drawable/ic_chart_24dp"
-        android:title="Profile" />
+        android:title="Chart" />
 
     <item
-        android:id="@+id/Settings"
+        android:id="@+id/fragment_profile"
         android:icon="@drawable/ic_person_24dp"
-        android:title="Settings" />
+        android:title="Profile" />
 
 </menu>
