ui: home ui 전체 구현 및 동작 구현
- ui 전체구성
- 자동 스크롤 버그 해결
   - 해당 프래그먼트를 나갈 때 소멸을 시켜주지 않음을 해결함
   - job을 통해 destroy에서 null 처리

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,12 +4,12 @@
     <item
         android:id="@+id/fragment_home"
         android:icon="@drawable/ic_home_24dp"
-        android:title="Home" />
+        android:title="홈" />
 
     <item
         android:id="@+id/fragment_board"
         android:icon="@drawable/ic_chat_24dp"
-        android:title="Board" />
+        android:title="게시판" />
 
     <item
         android:id="@+id/fragment_battle"
@@ -18,11 +18,11 @@
     <item
         android:id="@+id/fragment_chart"
         android:icon="@drawable/ic_chart_24dp"
-        android:title="Chart" />
+        android:title="랭킹" />
 
     <item
         android:id="@+id/fragment_profile"
         android:icon="@drawable/ic_person_24dp"
-        android:title="Profile" />
+        android:title="설정" />
 
 </menu>
