--- a/app/src/main/res/layout/board_overview_custom_item.xml
+++ b/app/src/main/res/layout/board_overview_custom_item.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_title"
@@ -43,14 +43,18 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="3dp"
+        app:cardElevation="1dp"
         app:cardCornerRadius="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_overview_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:minHeight="200dp"
             android:paddingHorizontal="15dp"
             android:paddingVertical="14dp" />
     </androidx.cardview.widget.CardView>
