--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,13 +27,16 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <ImageButton
+        <TextView
             android:id="@+id/btn_search"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_search_24dp" />
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/ic_search_24dp"
+            android:text="MY"
+            android:textSize="20sp" />
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.fragment.app.FragmentContainerView
