--- a/app/src/main/res/layout/board_overview_custom_item.xml
+++ b/app/src/main/res/layout/board_overview_custom_item.xml
@@ -8,9 +8,10 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
         android:text="HOT 게시물"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,10 +44,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
         android:layout_marginHorizontal="3dp"
-        app:cardElevation="1dp"
+        android:layout_marginVertical="10dp"
         app:cardCornerRadius="20dp"
+        app:cardElevation="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title">
 
