--- a/app/src/main/res/layout/profile_item.xml
+++ b/app/src/main/res/layout/profile_item.xml
@@ -6,10 +6,11 @@
     android:layout_height="wrap_content"
     android:minHeight="100dp">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="88dp"
         android:layout_margin="20dp"
+        android:background="@drawable/button_round"
         app:cardCornerRadius="20dp"
         app:cardElevation="1.15dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,11 +22,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <androidx.cardview.widget.CardView
+            <LinearLayout
                 android:id="@+id/cv_profile_image"
                 android:layout_width="58dp"
                 android:layout_height="58dp"
                 android:layout_marginStart="28dp"
+                android:background="@drawable/button_round"
                 app:cardCornerRadius="18dp"
                 app:cardElevation="1.15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -38,7 +40,7 @@
                     android:padding="6dp"
                     android:src="@drawable/ic_home_24dp" />
 
-            </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -73,6 +75,6 @@
                 tools:layout_editor_absoluteY="60dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
