--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -23,6 +23,6 @@
     <item
         android:id="@+id/fragment_profile"
         android:icon="@drawable/ic_person_24dp"
-        android:title="설정" />
+        android:title="마이페이지" />
 
 </menu>
