--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="form_error">#F44336</color>
     <color name="navi_btn_checked">#F7931E</color>
     <color name="navi_btn">#B9B9B9</color>
+    <color name="stroke_gray">#D9D9D9</color>
     <!-- 로그인 -->
     <color name="login_button">#FFC107</color>
 </resources>
