--- a/app/src/main/res/layout/profile_item.xml
+++ b/app/src/main/res/layout/profile_item.xml
@@ -7,10 +7,13 @@
     android:minHeight="100dp">
 
     <LinearLayout
+        android:id="@+id/layout_profile"
         android:layout_width="match_parent"
         android:layout_height="88dp"
         android:layout_margin="20dp"
         android:background="@drawable/button_round"
+        android:clickable="true"
+        android:focusable="true"
         app:cardCornerRadius="20dp"
         app:cardElevation="1.15dp"
         app:layout_constraintBottom_toBottomOf="parent"
