ui: 글쓰기 화면 구성 -글쓰기 화면,댓글 다는 화면 구성

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <!-- 공통 -->
+    <color name="main_orange">#F15A24</color>
     <color name="primary">#F84D17</color>
     <color name="transparent">#00ff0000</color>
     <color name="form_error">#F44336</color>
